ISP20220838 - SampleRFT Inspectione功能 1. 調整查詢出結果後，按下Inspection後，對SP#的檢驗流程判斷 2. 調整Others頁面按下Submit、Back的修改行為 3. Query功能，調整Measurement 頁籤Production Type下拉選單前端邏輯

--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab2_Layout.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab2_Layout.cshtml
@@ -57,7 +57,10 @@
         $.each(data, function (index, value) {
             articleArrList.push(value.Article);
             sizeArrList.push(value.Article + ',' + value.Size);
-            productTypeArrList.push(value.Article + ',' + value.ProductType);
+
+            if (productTypeArrList.indexOf(value.ProductType) == -1) {
+                productTypeArrList.push(value.ProductType);
+            }
         });
 
         $.each($.unique(articleArrList), function (index, value) {
@@ -69,7 +72,7 @@
         });
 
         $.each($.unique(productTypeArrList), function (index, value) {
-            productTypeOption += "<option value=" + value + ">" + value.split(',')[1] + "</option>";
+            productTypeOption += "<option value=" + value + ">" + value + "</option>";
         });
 
         $("#ViewListArticle").html(articleOption);
@@ -130,18 +133,18 @@
 
         $("#ViewListProductType > option").each(function () {
 
-            if (this.value.split(',')[0] == article) {
+            //if (this.value.split(',')[0] == article) {
                 productTypeOption += "<option value=" + this.value + ">" + this.text + "</option>";
 
                 //抓第一個roductType當預設值
                 if (newDefaultProductType == "") {
                     newDefaultProductType = this.value;
                 }
-            }
-            else {
-                //不是這個Article的ProductType隱藏
-                productTypeOption += "<option hidden value=" + this.value + ">" + this.text + "</option>";
-            }
+            //}
+            //else {
+            //    //不是這個Article的ProductType隱藏
+            //    productTypeOption += "<option hidden value=" + this.value + ">" + this.text + "</option>";
+            //}
         });
 
         $("#ViewListProductType").html(productTypeOption);
@@ -161,9 +164,9 @@
             Size = Size.split(',')[1];
         }
 
-        if (ProductType.split(',').length > 1) {
-            ProductType = ProductType.split(',')[1];
-        }
+        //if (ProductType.split(',').length > 1) {
+        //    ProductType = ProductType.split(',')[1];
+        //}
 
 
         $.each(AjaxReturn, function () {
