--- a/Quality/Quality/Areas/SampleRFT/Views/Shared/_ForAll_Layout.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Shared/_ForAll_Layout.cshtml
@@ -26,10 +26,10 @@
 <script>
     $(function () {
         $(window).keydown(function (event) {
-            if (event.keyCode == 13) {
-                event.preventDefault();
-                return false;
-            }
+            //if (event.keyCode == 13) {
+            //    event.preventDefault();
+            //    return false;
+            //}
         });
     });
 </script>
