--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/BeautifulProductAudit.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/BeautifulProductAudit.cshtml
@@ -56,7 +56,7 @@
                                     <td>
                                         @*@Html.TextBoxFor(model => Model.ListBACriteria[i].Qty, new { @type = "number", @style = "width:80px" })*@
 
-                                        <input type='number' style="width:80px" id='Req.ListBACriteria[@Model.ListBACriteria[i].RowIndex].Qty' name='Req.ListBACriteria[@Model.ListBACriteria[i].RowIndex].Qty' class="qty" value='@Model.ListBACriteria[i].Qty'>
+                                        <input type='number' style="width:80px" id='Req.ListBACriteria[@Model.ListBACriteria[i].RowIndex].Qty' min="0" name='Req.ListBACriteria[@Model.ListBACriteria[i].RowIndex].Qty' class="qty" value='@Model.ListBACriteria[i].Qty'>
 
                                         <input type='hidden' id='Req.ListBACriteria[@Model.ListBACriteria[i].RowIndex].Ukey' name='Req.ListBACriteria[@Model.ListBACriteria[i].RowIndex].Ukey' value='@Model.ListBACriteria[i].Ukey'>
 
@@ -98,13 +98,13 @@
 
         function QtyCheck(value, Max) {
 
-            // ISP20220813 數量不卡條件了
-            //if (parseFloat(value) >= Max) {
-            //    return Max;
-            //}
-            //else if (parseInt(value) < 0) {
-            //    return 0;
-            //}
+           
+            if (parseFloat(value) >= Max) {
+                return Max;
+            }
+            else if (parseInt(value) < 0) {
+                return 0;
+            }
 
             return Number.parseInt(value);
         }
