ISP20220813 - 調整CFT資料來源，下載ZIP路徑

--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
@@ -219,7 +219,7 @@
             <table style="width:100%">
                 <tr>
                     <td style="width:7%">CFT</td>
-                    <td class="valueColor" style="width:10%">@Model.sampleRFTInspection.AddNameText</td>
+                    <td class="valueColor" style="width:10%">@Model.sampleRFTInspection.CFTNameText</td>
 
                     <td style="width:7%">Pass Qty(pcs)</td>
                     <td class="valueColor" style="width:5%">@Model.sampleRFTInspection.PassQty</td>
