--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -226,24 +226,12 @@
 
         function OpenPicture(DetailUkey, RowIndex) {
 
-            // Ukey = -1代表還沒有這筆Detail紀錄
-            if (DetailUkey == -1) {
-                //msg.WithInfo("No Picture");
-                window.open('@Url.Action("DefectPicture")?RowIndex=' + RowIndex, "Picture", config = 'toolbar=no,status=no,location=no,width=700,height=600');
-            }
-            else {
-                window.open('@Url.Action("DefectPicture")?DetailUkey=' + DetailUkey, "Picture", config = 'toolbar=no,status=no,location=no,width=700,height=600');
-            }
+                window.open('@Url.Action("DefectPicture")?RowIndex=' + RowIndex +'&DetailUkey=' + DetailUkey, "Picture", config = 'toolbar=no,status=no,location=no,width=700,height=600');
         }
 
         function ScreenShot(DetailUkey, RowIndex) {
 
-            if (DetailUkey == -1) {
-                window.open('@Url.Action("AddDefectTakePicture")?RowIndex=' + RowIndex, "Picture", config = 'toolbar=no,status=no,location=no,width=700,height=600');
-            }
-            else {
-                window.open('@Url.Action("AddDefectTakePicture")?DetailUkey=' + DetailUkey, "Picture", config = 'toolbar=no,status=no,location=no,width=700,height=600');
-            }
+            window.open('@Url.Action("AddDefectTakePicture")?RowIndex=' + RowIndex +'&DetailUkey=' + DetailUkey, "Picture", config = 'toolbar=no,status=no,location=no,width=700,height=600');
         }
         function GetImage(Data, ImgSource) {
             //透過AJAX暫存成Temp Data
